--- a/sanity-project/tsconfig.json
+++ b/sanity-project/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "ES2017",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
@@ -15,6 +15,6 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "lib/client.js", "pages/index.jsx", "components/HeroBanner.jsx", "components/Product.jsx", "components/FooterBanner.jsx", "components/Layout.jsx", "pages/_app.jsx", "components/Navbar.jsx", "components/Footer.jsx"],
+  "include": ["**/*.ts", "**/*.tsx", "schemas/banner.js"],
   "exclude": ["node_modules"]
 }
