--- a/package.json
+++ b/package.json
@@ -9,22 +9,23 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
-		"@next/font": "13.1.1",
-		"@types/node": "18.11.17",
-		"@types/react": "18.0.26",
-		"@types/react-dom": "18.0.10",
-		"next": "13.1.1",
-		"react": "18.2.0",
-		"react-dom": "18.2.0",
-		"typescript": "4.9.4",
 		"@babel/core": "^7.17.9",
 		"@sanity/client": "^3.2.0",
 		"@sanity/image-url": "^1.0.1",
 		"@stripe/stripe-js": "^1.25.0",
 		"canvas-confetti": "^1.5.1",
-		"next-sanity-image": "^3.2.1",
+		"next": "12.1.0",
+		"next-sanity-image": "^5.0.0",
+		"react": "17.0.2",
+		"react-dom": "17.0.2",
 		"react-hot-toast": "^2.2.0",
 		"react-icons": "^4.3.1",
 		"stripe": "^8.209.0"
+	},
+	"devDependencies": {
+		"@babel/preset-react": "^7.16.7",
+		"@types/react": "^18.0.26",
+		"eslint": "8.13.0",
+		"eslint-config-next": "12.1.4"
 	}
 }
