--- a/sanity-project/tsconfig.json
+++ b/sanity-project/tsconfig.json
@@ -15,6 +15,6 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["**/*.ts", "**/*.tsx", "schemas/banner.js"],
+  "include": ["**/*.ts", "**/*.tsx", "schemas/banner.js", "schemas/product.js", "schemas/index.js", "sanity.cli.js", "sanity.config.js"],
   "exclude": ["node_modules"]
 }
